--- a/jetson_ub/docker/config/pip/requirements.txt
+++ b/jetson_ub/docker/config/pip/requirements.txt
@@ -3,31 +3,36 @@ osrf-pycommon==0.1.9
 # pyrealsense2
 tf
 # install some pip packages needed for testing
-argcomplete 
-flake8-blind-except 
-flake8-builtins 
-flake8-class-newline 
-flake8-comprehensions 
-flake8-deprecated 
-flake8-docstrings 
-flake8-import-order 
-flake8-quotes 
-pytest-repeat 
-pytest-rerunfailures 
-pytest
-#autolab_core dependent
-ruamel-yaml
-scikit-learn
-colorlog
-multiprocess
-setproctitle
-scikit-image
-visualization
-#gqcnn dependent
-# tensorflow-gpu==2.8.1
-protobuf==3.20
-future
-gputil
-
-# numpy==1.25.2
+#argcomplete 
+#flake8-blind-except 
+#flake8-builtins 
+#flake8-class-newline 
+#flake8-comprehensions 
+#flake8-deprecated 
+#flake8-docstrings 
+#flake8-import-order 
+#flake8-quotes 
+#pytest-repeat 
+#pytest-rerunfailures 
+#pytest
+##autolab_core dependent
+#ruamel-yaml
+#scikit-learn
+#colorlog
+#multiprocess
+#setproctitle
+#scikit-image
+#visualization
+##gqcnn dependent
+## tensorflow-gpu==2.8.1
+#protobuf==3.20
+#future
+#gputil
+#
+## UART
 pyserial==3.5
+#
+## Dynamixel XM430 Motor
+dynamixel-sdk
+pydot
+graphviz
