--- a/ub22_cu117_cudnn_ros2/Dockerfile
+++ b/ub22_cu117_cudnn_ros2/Dockerfile
@@ -44,6 +44,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   dbus-x11 libglvnd0 libgl1 libglx0 libegl1 libxext6 libx11-6 \
   ###########for add-apt-repository##################
   software-properties-common\
+  bash-completion \
   #libmobus depend
   libtool \
   # Editing tools
@@ -53,6 +54,15 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   python3-pip python3-dev python3-setuptools
 RUN apt-get clean \
   && rm -rf /var/lib/apt/lists
+
+
+#=========================================================
+#    Modifly bash
+#=========================================================
+RUN echo 'if [ -f /etc/bash_completion ]; then' >> /etc/bash.bashrc \
+    && echo '    . /etc/bash_completion' >> /etc/bash.bashrc \
+    && echo 'fi' >> /etc/bash.bashrc
+
 
 
 RUN apt update && \
@@ -72,8 +82,10 @@ RUN apt update && \
     rm -rf /var/lib/apt/lists/*
 
 
+
 RUN pip install torch==2.0.0+cu117 torchvision==0.15.1+cu117 torchaudio==2.0.1 --index-url https://download.pytorch.org/whl/cu117
 #######################
+
 
 
 ## YOLO
